--- a/hamro.html
+++ b/hamro.html
@@ -1,6 +1,6 @@
-<form method="POST" action="http://localhost:5000/submit">
+<form method="GET" action="http://localhost:5000/submit">
  
-    <input placeholder="useranem" type="text" name="username" required>
+    <input placeholder="useraname" type="text" name="username" required>
     <br>
     <input type="password" name="password" required>
     <br>
